fix: SecurityConfig